[package]
name = "mev-template"
version = "0.1.0"
edition = "2021"

[dependencies]
# Interact w/ EVM blockchains.
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws", "rustls", "abigen"] }

# Loading .env variables.
dotenv = "0.15.0"

# Running async threads.
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }

# For quick and easy discord alerts.
reqwest = "0.11.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding/decoding
hex = "0.4"

# Random number generation for Flashbots signer
rand = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"
